@@ -1,4 +1,10 @@
 ------------------------------------------------------
+Release 2 | Beta 1 | Development 1 | Experimental 2
+
+* Added point light to Light3D
+* Added spot light to Light3D
+
+------------------------------------------------------
 Release 2 | Beta 1 | Development 1 | Experimental 1
 
 * Added Light3D
